# Tcc

./: Final_Diagrams.drawio  README.md  Untitled Diagram.drawio  bibliografia.bib  diagrams.drawio  main.tex  readme.md
3+images/Akaze/: main.cpp
3+images/ORB/: main.cpp
3+images/SIFT/: main.cpp
3+images/SURF/: main.cpp
Comparing/: main.cpp
Detect_Compute/AKAZE/: main.cpp
Detect_Compute/ORB/: main.cpp
Detect_Compute/SIFT/: main.cpp
Detect_Compute/SURF/: main.cpp
DetectandCompute/AKAZE/: main.cpp
DetectandCompute/ORB/: main.cpp
DetectandCompute/SIFT/: main.cpp
DetectandCompute/SURF/: main.cpp
TCC_FINAL/: CMakeLists.txt  main.cpp
capitulos/: ch0.tex  ch1.tex  ch2.tex  ch3.tex  ch4.tex  readme.md
data/: pattern0.pgm  pattern1.pgm  pattern2.pgm  pattern3.pgm  readme.md  zxc-cv
drafts/imageLoader/: index.html
figuras/: readme.md
formato/: abnt-options4.bib  linguagens.tex  pacotes.tex  readme.md  repUERJ.cls  repUERJformat.sty  repUERJpseudocode.sty
nImages/: BFM_Images.cpp  Compute_Images.cpp  Data_Output.cpp  Detect_Images.cpp  Good_Matches.cpp  Good_Matches_2.cpp  Good_Matches_3.cpp  Homography_Images.cpp  Open_n_images.cpp  img_open.cpp  main.cpp
postexto/: anexos.tex  apendices.tex  glossario.tex  readme.md
pretexto/: abreviatura.tex  abstract.tex  agradecimento.tex  configAutor.tex  dedicatoria.tex  epigrafe.tex  folhaAprov.tex  readme.md  resumo.tex
src/: CMakeLists.txt  control.cpp  control.hpp  image.cpp  image.hpp  macros.hpp  main.cpp  pair.cpp  pair.hpp  point.cpp  point.hpp  readme.md
